@@ -1,59 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record ej(List<ej.a> b) {
-   public static final ej a = new ej(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class ej implements ArgumentType<ej.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(wu.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(wu.c("argument.angle.invalid"));
 
-   public ej(vs $$0) {
-      this($$0.a(vs.a(ArrayList::new, 8), ej.a::new));
+   public static ej a() {
+      return new ej();
    }
 
-   @Nullable
-   public xe a(String $$0) {
-      for (ej.a $$1 : this.b) {
-         if ($$1.a.equals($$0)) {
-            return $$1.b;
+   public static float a(CommandContext<ed> $$0, String $$1) {
+      return ((ej.a)$$0.getArgument($$1, ej.a.class)).a((ed)$$0.getSource());
+   }
+
+   public ej.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = gh.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new ej.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
          }
       }
-
-      return null;
    }
 
-   public void a(vs $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public Collection<String> getExamples() {
+      return c;
    }
 
-   public static ej a(xk<?> $$0, ej.b $$1) {
-      List<ej.a> $$2 = $$0.a().stream().map($$1x -> {
-         xe $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new ej.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new ej($$2);
-   }
+   public static final class a {
+      private final float a;
+      private final boolean b;
 
-   public List<ej.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, xe b) {
-
-      public a(vs $$0) {
-         this($$0.d(16), xe.a($$0));
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
       }
 
-      public void a(vs $$0) {
-         $$0.a(this.a, 16);
-         xe.a($$0, this.b);
+      public float a(ed $$0) {
+         return axz.g(this.b ? this.a + $$0.k().j : this.a);
       }
-   }
-
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      xe sign(String var1);
    }
 }
