@@ -1,44 +1,59 @@
-import com.mojang.brigadier.StringReader;
-import com.mojang.brigadier.arguments.ArgumentType;
-import com.mojang.brigadier.context.CommandContext;
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.concurrent.CompletableFuture;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import javax.annotation.Nullable;
 
-public class ek implements ArgumentType<n> {
-   private static final Collection<String> b = Arrays.asList("red", "green");
-   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> ws.b("argument.color.invalid", $$0));
+public record ek(List<ek.a> b) {
+   public static final ek a = new ek(List.of());
+   private static final int c = 8;
+   private static final int d = 16;
 
-   private ek() {
+   public ek(vu $$0) {
+      this($$0.a(vu.a(ArrayList::new, 8), ek.a::new));
    }
 
-   public static ek a() {
-      return new ek();
+   @Nullable
+   public xg a(String $$0) {
+      for (ek.a $$1 : this.b) {
+         if ($$1.a.equals($$0)) {
+            return $$1.b;
+         }
+      }
+
+      return null;
    }
 
-   public static n a(CommandContext<ec> $$0, String $$1) {
-      return (n)$$0.getArgument($$1, n.class);
+   public void a(vu $$0) {
+      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
    }
 
-   public n a(StringReader $$0) throws CommandSyntaxException {
-      String $$1 = $$0.readUnquotedString();
-      n $$2 = n.b($$1);
-      if ($$2 != null && !$$2.d()) {
-         return $$2;
-      } else {
-         throw a.createWithContext($$0, $$1);
+   public static ek a(xm<?> $$0, ek.b $$1) {
+      List<ek.a> $$2 = $$0.a().stream().map($$1x -> {
+         xg $$2x = $$1.sign($$1x.c());
+         return $$2x != null ? new ek.a($$1x.a(), $$2x) : null;
+      }).filter(Objects::nonNull).toList();
+      return new ek($$2);
+   }
+
+   public List<ek.a> a() {
+      return this.b;
+   }
+
+   public static record a(String a, xg b) {
+
+      public a(vu $$0) {
+         this($$0.d(16), xg.a($$0));
+      }
+
+      public void a(vu $$0) {
+         $$0.a(this.a, 16);
+         xg.a($$0, this.b);
       }
    }
 
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return eh.b(n.a(true, false), $$1);
-   }
-
-   public Collection<String> getExamples() {
-      return b;
+   @FunctionalInterface
+   public interface b {
+      @Nullable
+      xg sign(String var1);
    }
 }
