@@ -1,47 +1,271 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface qu {
-   static void a(qj<egm> $$0) {
-      iw<egg> $$1 = $$0.a(ld.aI);
-      iw<dat> $$2 = $$0.a(ld.ay);
-      iv.c<egm> $$3 = $$0.a(
-         efz.a,
-         new egm(
-            List.of(egm.a($$1.b(ega.t)), egm.a($$1.b(ega.u)), egm.a($$1.b(ega.v)), egm.a($$1.b(ega.w)), egm.a($$1.b(ega.x))), new ehb(34, 8, ehc.a, 10387312)
-         )
-      );
-      $$0.a(efz.b, new egm($$1.b(ega.f), new ehb(32, 8, ehc.a, 14357617)));
-      $$0.a(efz.c, new egm($$1.b(ega.g), new ehb(32, 8, ehc.a, 14357618)));
-      $$0.a(efz.d, new egm($$1.b(ega.e), new ehb(32, 8, ehc.a, 14357619)));
-      $$0.a(efz.e, new egm($$1.b(ega.j), new ehb(32, 8, ehc.a, 14357620)));
-      $$0.a(efz.f, new egm($$1.b(ega.a), new ehb(jq.g, ehd.c.b, 0.2F, 165745296, Optional.of(new ehd.a($$3, 10)), 32, 8, ehc.a)));
-      $$0.a(efz.q, new egm($$1.b(ega.F), new ehb(24, 8, ehc.a, 20083232)));
-      $$0.a(efz.g, new egm($$1.b(ega.l), new ehb(32, 5, ehc.b, 10387313)));
-      $$0.a(efz.h, new egm($$1.b(ega.d), new ehb(80, 20, ehc.b, 10387319)));
-      $$0.a(efz.i, new egm($$1.b(ega.r), new ehb(new jq(9, 0, 9), ehd.c.c, 0.01F, 0, Optional.empty(), 1, 0, ehc.a)));
-      $$0.a(efz.j, new egm(List.of(egm.a($$1.b(ega.b)), egm.a($$1.b(ega.c))), new ehb(jq.g, ehd.c.d, 0.004F, 0, Optional.empty(), 1, 0, ehc.a)));
+public class qu {
+   public static final akg<ehy> a = qs.a("village/savanna/town_centers");
+   private static final akg<ehy> b = qs.a("village/savanna/terminators");
+   private static final akg<ehy> c = qs.a("village/savanna/zombie/terminators");
+
+   public static void a(ql<ehy> $$0) {
+      ix<eft> $$1 = $$0.a(le.aI);
+      iw<eft> $$2 = $$1.b(si.g);
+      iw<eft> $$3 = $$1.b(si.a);
+      iw<eft> $$4 = $$1.b(si.b);
+      ix<ekn> $$5 = $$0.a(le.aK);
+      iw<ekn> $$6 = $$5.b(qt.b);
+      iw<ekn> $$7 = $$5.b(qt.j);
+      iw<ekn> $$8 = $$5.b(qt.m);
+      ix<ehy> $$9 = $$0.a(le.aM);
+      iw<ehy> $$10 = $$9.b(qs.a);
+      iw<ehy> $$11 = $$9.b(b);
+      iw<ehy> $$12 = $$9.b(c);
       $$0.a(
-         efz.k,
-         new egm(
-            List.of(
-               egm.a($$1.b(ega.y)),
-               egm.a($$1.b(ega.z)),
-               egm.a($$1.b(ega.A)),
-               egm.a($$1.b(ega.B)),
-               egm.a($$1.b(ega.C)),
-               egm.a($$1.b(ega.D)),
-               egm.a($$1.b(ega.E))
+         a,
+         new ehy(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(ehw.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(ehw.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(ehw.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(ehw.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(ehw.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(ehw.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
             ),
-            new ehb(40, 15, ehc.a, 34222645)
+            ehy.a.b
          )
       );
-      $$0.a(efz.l, new egm(List.of(egm.a($$1.b(ega.h)), egm.a($$1.b(ega.i))), new ehb(24, 4, ehc.a, 165745295)));
-      $$0.a(efz.m, new egm(List.of(egm.a($$1.b(ega.m)), egm.a($$1.b(ega.n))), new ehb(20, 8, ehc.a, 14357621)));
-      $$0.a(efz.n, new egm(List.of(egm.a($$1.b(ega.o), 2), egm.a($$1.b(ega.s), 3)), new ehb(27, 4, ehc.a, 30084232)));
-      $$0.a(efz.o, new egm($$1.b(ega.p), new ehb(2, 1, ehc.a, 14357921)));
-      $$0.a(efz.p, new egm($$1.b(ega.q), new ehb(20, 11, ehc.b, 10387313)));
-      $$0.a(efz.r, new egm($$1.b(ega.k), new eha(32, 3, 128, $$2.b(avn.o))));
-      $$0.a(efz.s, new egm($$1.b(ega.G), new ehb(34, 8, ehc.a, 83469867)));
+      qs.a(
+         $$0,
+         "village/savanna/streets",
+         new ehy(
+            $$11,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(ehw.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(ehw.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(ehw.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(ehw.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(ehw.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(ehw.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(ehw.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(ehw.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(ehw.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(ehw.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(ehw.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(ehw.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            ehy.a.a
+         )
+      );
+      qs.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new ehy(
+            $$12,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(ehw.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(ehw.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(ehw.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(ehw.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(ehw.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            ehy.a.a
+         )
+      );
+      qs.a(
+         $$0,
+         "village/savanna/houses",
+         new ehy(
+            $$11,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(ehw.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(ehw.g(), 5)
+               }
+            ),
+            ehy.a.b
+         )
+      );
+      qs.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new ehy(
+            $$12,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(ehw.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(ehw.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(ehw.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(ehw.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(ehw.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(ehw.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(ehw.g(), 5)
+               }
+            ),
+            ehy.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new ehy(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(ehw.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(ehw.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(ehw.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(ehw.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            ehy.a.a
+         )
+      );
+      $$0.a(
+         c,
+         new ehy(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(ehw.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(ehw.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(ehw.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(ehw.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            ehy.a.a
+         )
+      );
+      qs.a($$0, "village/savanna/trees", new ehy($$10, ImmutableList.of(Pair.of(ehw.a($$2), 1)), ehy.a.b));
+      qs.a(
+         $$0,
+         "village/savanna/decor",
+         new ehy(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(ehw.a($$2), 4),
+               Pair.of(ehw.a($$3), 4),
+               Pair.of(ehw.a($$4), 1),
+               Pair.of(ehw.g(), 4)
+            ),
+            ehy.a.b
+         )
+      );
+      qs.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new ehy(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(ehw.a($$2), 4),
+               Pair.of(ehw.a($$3), 4),
+               Pair.of(ehw.a($$4), 1),
+               Pair.of(ehw.g(), 4)
+            ),
+            ehy.a.b
+         )
+      );
+      qs.a(
+         $$0,
+         "village/savanna/villagers",
+         new ehy(
+            $$10,
+            ImmutableList.of(
+               Pair.of(ehw.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(ehw.a("village/savanna/villagers/baby"), 1),
+               Pair.of(ehw.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            ehy.a.b
+         )
+      );
+      qs.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new ehy(
+            $$10,
+            ImmutableList.of(Pair.of(ehw.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(ehw.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            ehy.a.b
+         )
+      );
    }
 }
