@@ -1,250 +1,107 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class qx {
-   public static final ake<ehp> a = qq.a("village/taiga/town_centers");
-   private static final ake<ehp> b = qq.a("village/taiga/terminators");
+   public static egp.c a(ja<dbc> $$0, Map<bsd, egw> $$1, dvv.b $$2, eha $$3) {
+      return new egp.c($$0, $$1, $$2, $$3);
+   }
 
-   public static void a(qj<ehp> $$0) {
-      iw<efk> $$1 = $$0.a(ld.aH);
-      iv<efk> $$2 = $$1.b(sg.h);
-      iv<efk> $$3 = $$1.b(sg.i);
-      iv<efk> $$4 = $$1.b(sg.e);
-      iv<efk> $$5 = $$1.b(sg.l);
-      iv<efk> $$6 = $$1.b(sg.m);
-      iw<eke> $$7 = $$0.a(ld.aJ);
-      iv<eke> $$8 = $$7.b(qr.f);
-      iv<eke> $$9 = $$7.b(qr.d);
-      iv<eke> $$10 = $$7.b(qr.k);
-      iv<eke> $$11 = $$7.b(qr.o);
-      iw<ehp> $$12 = $$0.a(ld.aL);
-      iv<ehp> $$13 = $$12.b(qq.a);
-      iv<ehp> $$14 = $$12.b(b);
+   private static egp.c a(ja<dbc> $$0, dvv.b $$1, eha $$2) {
+      return a($$0, Map.of(), $$1, $$2);
+   }
+
+   private static egp.c a(ja<dbc> $$0, eha $$1) {
+      return a($$0, Map.of(), dvv.b.e, $$1);
+   }
+
+   public static void a(ql<egp> $$0) {
+      ix<dbc> $$1 = $$0.a(le.az);
+      ix<ehy> $$2 = $$0.a(le.aM);
       $$0.a(
-         a,
-         new ehp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(ehn.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(ehn.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(ehn.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
-            ),
-            ehp.a.b
+         egj.a,
+         new eip(
+            a($$1.b(avq.y), Map.of(bsd.a, new egw(egw.a.b, boa.a(new dbo.c(brn.aB, 1, 1, 1)))), dvv.b.e, eha.c), $$2.b(qq.a), 7, eev.a(dwt.a(0)), true, dvz.a.a
          )
       );
-      qq.a(
-         $$0,
-         "village/taiga/streets",
-         new ehp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(ehn.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(ehn.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(ehn.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(ehn.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(ehn.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(ehn.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(ehn.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(ehn.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(ehn.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(ehn.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(ehn.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ehn.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(ehn.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(ehn.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(ehn.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            ehp.a.a
-         )
-      );
-      qq.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new ehp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(ehn.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(ehn.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(ehn.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(ehn.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(ehn.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(ehn.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(ehn.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(ehn.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(ehn.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(ehn.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(ehn.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(ehn.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(ehn.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(ehn.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(ehn.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            ehp.a.a
-         )
-      );
-      qq.a(
-         $$0,
-         "village/taiga/houses",
-         new ehp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(ehn.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(ehn.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(ehn.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(ehn.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(ehn.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(ehn.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(ehn.g(), 6)
-               }
-            ),
-            ehp.a.b
-         )
-      );
-      qq.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new ehp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(ehn.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(ehn.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(ehn.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(ehn.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(ehn.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(ehn.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(ehn.g(), 6)
-               }
-            ),
-            ehp.a.b
-         )
-      );
+      $$0.a(egj.b, new eit(a($$1.b(avq.t), dvv.b.d, eha.a), eit.a.a));
+      $$0.a(egj.c, new eit(a($$1.b(avq.u), dvv.b.d, eha.a), eit.a.b));
+      $$0.a(egj.d, new ejl(a($$1.b(avq.Q), eha.a)));
+      $$0.a(egj.e, new eir(a($$1.b(avq.s), eha.a)));
+      $$0.a(egj.f, new eik(a($$1.b(avq.q), eha.a)));
+      $$0.a(egj.g, new eio(a($$1.b(avq.r), eha.a)));
+      $$0.a(egj.h, new ejf(a($$1.b(avq.G), eha.a), false));
+      $$0.a(egj.i, new ejf(a($$1.b(avq.F), eha.a), true));
       $$0.a(
-         b,
-         new ehp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(ehn.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(ehn.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(ehn.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            ehp.a.a
+         egj.j,
+         new ejj(
+            a(
+               $$1.b(avq.J),
+               Map.of(bsd.a, new egw(egw.a.a, boa.a(new dbo.c(brn.bn, 1, 1, 1))), bsd.b, new egw(egw.a.a, boa.a(new dbo.c(brn.p, 1, 1, 1)))),
+               dvv.b.e,
+               eha.a
+            )
          )
       );
-      qq.a(
-         $$0,
-         "village/taiga/decor",
-         new ehp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(ehn.a($$2), 4),
-               Pair.of(ehn.a($$3), 4),
-               Pair.of(ehn.a($$4), 2),
-               Pair.of(ehn.a($$5), 4),
-               Pair.of(ehn.a($$6), 1),
-               new Pair[]{Pair.of(ehn.g(), 4)}
-            ),
-            ehp.a.b
+      $$0.a(egj.k, new ejh(a($$1.b(avq.H), eha.b)));
+      $$0.a(
+         egj.l,
+         new eiz(
+            a(
+               $$1.b(avq.v),
+               Map.of(bsd.a, new egw(egw.a.b, boa.a(new dbo.c(brn.Y, 1, 2, 4))), bsd.e, new egw(egw.a.b, dbo.a), bsd.d, new egw(egw.a.b, dbo.a)),
+               dvv.b.e,
+               eha.a
+            )
          )
       );
-      qq.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new ehp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(ehn.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(ehn.a($$2), 4),
-               Pair.of(ehn.a($$3), 4),
-               Pair.of(ehn.a($$4), 2),
-               Pair.of(ehn.a($$5), 4),
-               Pair.of(ehn.a($$6), 1),
-               Pair.of(ehn.g(), 4)
-            ),
-            ehp.a.b
+      $$0.a(egj.m, new ejb(a($$1.b(avq.w), eha.a), ejb.a.b, 0.3F, 0.9F));
+      $$0.a(egj.n, new ejb(a($$1.b(avq.x), eha.a), ejb.a.a, 0.3F, 0.9F));
+      $$0.a(egj.o, new eiv(a($$1.b(avq.R), Map.of(bsd.a, new egw(egw.a.a, eiv.d)), dvv.b.h, eha.a)));
+      $$0.a(egj.p, new eix(a($$1.b(avq.S), dvv.b.h, eha.c), eez.a(dwt.a(32), dwt.c(2))));
+      $$0.a(egj.q, new eim(a($$1.b(avq.W), eha.a)));
+      $$0.a(egj.r, new eii(a($$1.b(avq.p), dvv.b.d, eha.a)));
+      $$0.a(egj.s, new eip(a($$1.b(avq.T), eha.a), $$2.b(qh.a), 6, eev.a(dwt.a(33)), false));
+      $$0.a(egj.t, new eip(a($$1.b(avq.L), eha.c), $$2.b(qr.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
+      $$0.a(egj.u, new eip(a($$1.b(avq.K), eha.c), $$2.b(qn.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
+      $$0.a(egj.v, new eip(a($$1.b(avq.M), eha.c), $$2.b(qu.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
+      $$0.a(egj.w, new eip(a($$1.b(avq.N), eha.c), $$2.b(qv.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
+      $$0.a(egj.x, new eip(a($$1.b(avq.O), eha.c), $$2.b(qz.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
+      $$0.a(
+         egj.y,
+         new ejd(
+            a($$1.b(avq.E), eha.a),
+            List.of(new ejd.a(ejc.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new ejd.a(ejc.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      qq.a(
-         $$0,
-         "village/taiga/villagers",
-         new ehp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(ehn.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(ehn.a("village/taiga/villagers/baby"), 1),
-               Pair.of(ehn.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            ehp.a.b
+      $$0.a(egj.z, new ejd(a($$1.b(avq.z), eha.a), new ejd.a(ejc.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
+      $$0.a(egj.A, new ejd(a($$1.b(avq.A), eha.a), new ejd.a(ejc.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
+      $$0.a(egj.B, new ejd(a($$1.b(avq.C), eha.a), new ejd.a(ejc.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
+      $$0.a(
+         egj.C,
+         new ejd(
+            a($$1.b(avq.D), eha.a),
+            List.of(new ejd.a(ejc.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new ejd.a(ejc.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      qq.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new ehp(
-            $$13,
-            ImmutableList.of(Pair.of(ehn.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(ehn.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            ehp.a.b
+      $$0.a(egj.D, new ejd(a($$1.b(avq.B), eha.a), new ejd.a(ejc.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
+      $$0.a(egj.E, new ejd(a($$1.b(avq.V), eha.a), new ejd.a(ejc.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
+      $$0.a(
+         egj.F,
+         new eip(
+            a($$1.b(avq.U), Arrays.stream(bsd.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new egw(egw.a.b, boa.c()))), dvv.b.h, eha.d),
+            $$2.b(qc.a),
+            Optional.of(new akh("city_anchor")),
+            7,
+            eev.a(dwt.a(-27)),
+            false,
+            Optional.empty(),
+            116,
+            List.of()
          )
       );
+      $$0.a(egj.G, new eip(a($$1.b(avq.P), Map.of(), dvv.b.d, eha.b), $$2.b(rb.a), 7, eev.a(dwt.a(-15)), false, dvz.a.a));
    }
 }
