@@ -1,55 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class rp {
-   public static final ake<dyh<?, ?>> a = ro.a("ice_spike");
-   public static final ake<dyh<?, ?>> b = ro.a("ice_patch");
-   public static final ake<dyh<?, ?>> c = ro.a("forest_rock");
-   public static final ake<dyh<?, ?>> d = ro.a("iceberg_packed");
-   public static final ake<dyh<?, ?>> e = ro.a("iceberg_blue");
-   public static final ake<dyh<?, ?>> f = ro.a("blue_ice");
-   public static final ake<dyh<?, ?>> g = ro.a("lake_lava");
-   public static final ake<dyh<?, ?>> h = ro.a("disk_clay");
-   public static final ake<dyh<?, ?>> i = ro.a("disk_gravel");
-   public static final ake<dyh<?, ?>> j = ro.a("disk_sand");
-   public static final ake<dyh<?, ?>> k = ro.a("freeze_top_layer");
-   public static final ake<dyh<?, ?>> l = ro.a("disk_grass");
-   public static final ake<dyh<?, ?>> m = ro.a("bonus_chest");
-   public static final ake<dyh<?, ?>> n = ro.a("void_start_platform");
-   public static final ake<dyh<?, ?>> o = ro.a("desert_well");
-   public static final ake<dyh<?, ?>> p = ro.a("spring_lava_overworld");
-   public static final ake<dyh<?, ?>> q = ro.a("spring_lava_frozen");
-   public static final ake<dyh<?, ?>> r = ro.a("spring_water");
+   public static final akg<dyq<?, ?>> a = rq.a("end_spike");
+   public static final akg<dyq<?, ?>> b = rq.a("end_gateway_return");
+   public static final akg<dyq<?, ?>> c = rq.a("end_gateway_delayed");
+   public static final akg<dyq<?, ?>> d = rq.a("chorus_plant");
+   public static final akg<dyq<?, ?>> e = rq.a("end_island");
 
-   public static void a(qj<dyh<?, ?>> $$0) {
-      ro.a($$0, a, dyu.s);
-      ro.a($$0, b, dyu.G, new eav(edh.a(dcx.iC), dwx.c(List.of(dcx.j, dcx.i, dcx.l, dcx.k, dcx.fl, dcx.dP, dcx.dO)), bob.a(2, 3), 1));
-      ro.a($$0, c, dyu.F, new ear(dcx.cn.n()));
-      ro.a($$0, d, dyu.E, new ear(dcx.iC.n()));
-      ro.a($$0, e, dyu.E, new ear(dcx.mW.n()));
-      ro.a($$0, f, dyu.D);
-      ro.a($$0, g, dyu.H, new dzj.a(ecz.a(dcx.H.n()), ecz.a(dcx.b.n())));
-      ro.a($$0, h, dyu.G, new eav(edh.a(dcx.dR), dwx.c(List.of(dcx.j, dcx.dR)), bob.a(2, 3), 1));
-      ro.a($$0, i, dyu.G, new eav(edh.a(dcx.L), dwx.c(List.of(dcx.j, dcx.i)), bob.a(2, 5), 2));
-      ro.a(
-         $$0, j, dyu.G, new eav(new edh(ecz.a(dcx.I), List.of(new edh.a(dwx.a(ir.a.q(), dcx.a), ecz.a(dcx.aV)))), dwx.c(List.of(dcx.j, dcx.i)), bob.a(2, 6), 2)
-      );
-      ro.a($$0, k, dyu.u);
-      ro.a(
-         $$0,
-         l,
-         dyu.G,
-         new eav(
-            new edh(ecz.a(dcx.j), List.of(new edh.a(dwx.a(dwx.b(dwx.b(ir.b.q()), dwx.a(ir.b.q(), els.c))), ecz.a(dcx.i)))),
-            dwx.c(List.of(dcx.j, dcx.sI)),
-            bob.a(2, 6),
-            2
-         )
-      );
-      ro.a($$0, m, dyu.ac);
-      ro.a($$0, n, dyu.n);
-      ro.a($$0, o, dyu.o);
-      ro.a($$0, p, dyu.k, new ebt(els.e.g(), true, 4, 1, iz.a(dcv::r, dcx.b, dcx.c, dcx.e, dcx.g, dcx.sJ, dcx.qz, dcx.qN, dcx.j)));
-      ro.a($$0, q, dyu.k, new ebt(els.e.g(), true, 4, 1, iz.a(dcv::r, dcx.dP, dcx.qP, dcx.iC)));
-      ro.a($$0, r, dyu.k, new ebt(els.c.g(), true, 4, 1, iz.a(dcv::r, dcx.b, dcx.c, dcx.e, dcx.g, dcx.sJ, dcx.qz, dcx.qN, dcx.j, dcx.dP, dcx.qP, dcx.iC)));
+   public static void a(ql<dyq<?, ?>> $$0) {
+      rq.a($$0, a, dzd.J, new ecb(false, ImmutableList.of(), null));
+      rq.a($$0, b, dzd.L, ebg.a(aqh.a, true));
+      rq.a($$0, c, dzd.L, ebg.a());
+      rq.a($$0, d, dzd.l);
+      rq.a($$0, e, dzd.K);
    }
 }
